--- a/css/seunga.css
+++ b/css/seunga.css
@@ -49,285 +49,52 @@ a {
 연한 하늘색 #F0F4FF
 푸터색 #3333
 */
+
 /* =======================================================승아 */
 /* 상당로고 이미지 */
-h4 {
-  font-weight: bold;
-  padding: 10% 0 10% 2%;
-  font-size: 36px;
-  text-align: left;
-  color: red;
-}
-/* 로그인버튼 */
-/* 기본 스타일 */
-/* body {
-  font-family: Arial, sans-serif;
-  background-color: #96c99f;
-  height: 100vh;
-  box-sizing: border-box;
-} */
-.wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  width: 80%;
-  padding: 10px;
-  margin: 0 auto;
-}
-
-/* 섹션 스타일 */
-.section {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-#signup-section {
-  width: 30%;
-  margin-left: 20px;
-}
-
-#dashboard-section {
-  width: 70%;
-  display: inline-block;
-}
-
-/* 버튼 스타일 */
-/* button {
-  width: 80%;
-  background-color: #007bff;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-} */
-
-/* 로그아웃 버튼 스타일 */
-#logout-button {
-  background-color: #1e6bf1;
-  width: 30%;
-  float: right;
-}
-
-/* 사용자 이름 디스플레이 스타일 */
-#username-display {
-  font-size: 20px;
-  color: #3d3d3d;
-  /* width: 60%; */
-  margin-top: 8px;
-  display: inline-block;
-  margin-left: 100px;
-}
-#login-section {
-  width: 70%;
-}
+/* 헤더 */
 header {
-  max-width: 1400px;
-  width: 100%;
-  height: auto;
-  position: relative;
-  padding: 30px;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin: 0 auto;
-  /* position: fixed; */
+  position: fixed; /* 네비게이션 바가 항상 화면 상단에 고정될 수 있도록 */
+  top: 0; /* 화면의 맨 위에 위치 */
+  width: 100%; /* 전체 너비 차지 */
+  background-color: #fff; /* 네비게이션 바의 배경색으로 설정 */
+  z-index: 99999999999; /* 네비게이션 바가 다른 요소 위에 올라가도록 z-index 설정 */
+  box-shadow: -1px 2px 10px 4px rgba(0, 0, 0, 0.05); /* 네비게이션 바의 box-shadow 효과 */
 }
+
 header img {
-  width: 220px;
+  width: 200px;
   display: inline-block;
   position: absolute;
-  left: 0;
-  top: 0;
-  padding: 20px;
+  left: 30px; /* 왼쪽 여백 추가 */
+  top: 50%;
+  transform: translateY(-50%); /* 수직 중앙 정렬 */
 }
-/* 상단메뉴 박스 */
-.top-nav {
+
+/* 네비게이션 바 */
+nav {
   max-width: 1400px;
-  width: 100%;
+  /* background-color: transparent;  */
+  /* 투명 배경색으로 설정하여 header에서 배경색을 상속받도록 */
+  padding: 30px;
+  position: relative; /* 헤더와의 상대적 위치 설정 */
   display: block;
-  padding: 22px;
-  position: relative; /* 수정 */
-  z-index: 9999;
+  /* z-index: 9999; */
+
   margin: 0 auto;
 }
-/* ==================== */
-
-/* 네비 */
-.main-menu {
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  height: 90px;
-  font-size: 22px;
-  font-weight: bold;
-  background-color: white;
-}
-/* 메뉴-log */
-.log {
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  gap: 16%;
-  padding: 8px 0 8px 0;
-  margin-left: 4%;
-  right: 0; /* 수정 */
-  top: 0; /* 추가 */
-}
-/* 네비 호버 */
-.main-menu > li:hover > a {
-  /* color: #0080ed; */
-  /* color: #f68245; */
-  /* color: #a4bdeb; */
-  background: linear-gradient(to top, #134aa9 40%, transparent 40%);
-  transition: all 3s;
-}
-.main-menu > li > .sub-menu > li:hover > a {
-  /* color: #fed74b; */
-  color: #134aa9;
-}
-/* 햄버거 눌렀을 때 호버 */
-.nav-mb-gnb li:hover a {
-  color: #134aa9;
-}
-.navbt {
-  display: none;
-  /* position: absolute;
-  top: 90px;
-  left: 0; */
-  width: 100%;
-  height: 400px;
-  z-index: -1;
-  background-color: white;
-}
-.sub-menu {
-  width: 100%;
-  z-index: 1;
-  font-size: 20px;
-}
-.sub-menu li {
-  display: none;
-  width: 100%;
-  text-decoration: none;
-  color: black;
-}
-/*   모바일 로고 */
-.logo-tablet,
-.fa-solid {
-  display: none;
-}
-
-/* 모바일 메뉴 햄버거  */
-.mbt {
-  display: none;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  right: 30px;
-  width: 30px;
-  height: 22px;
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-}
-.mbt span {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #333;
-}
-/* 햄버거 눌렀을 때 색상 바뀜 */
-.mbt.active span {
-  background-color: #0a3585;
-}
-/* 삼단에서 엑스 바꿔주기 */
-.mbt span:nth-child(1) {
-  top: 0;
-  transform-origin: 0 50%;
-  transition: all 0.3s;
-}
-.mbt.ani span:nth-child(1) {
-  transform: rotate(45deg);
-}
-.mbt span:nth-child(2) {
-  top: 50%;
-}
-.mbt.ani span:nth-child(2) {
-  opacity: 0;
-}
-.mbt span:nth-child(3) {
-  top: 100%;
-  transform-origin: 0 50%;
-  transition: all 0.3s;
-}
-.mbt.ani span:nth-child(3) {
-  transform: rotate(-45deg);
-}
-/* 모바일 메뉴 리스트 */
-.nav-mb {
-  position: absolute;
-  left: 100%;
-  top: 90px;
-  width: 100%;
-  height: calc(100vh - 70px);
-  background-color: #fff;
-  opacity: 1;
-  transition: all 0.3s;
-  z-index: 9999;
-}
-.nav-mb.active {
-  left: 0%;
-  opacity: 1;
-}
-.nav-mb-gnb li {
-  line-height: 70px;
-}
-.nav-mb-gnb li a {
-  display: block;
-  padding: 0 40px;
-  font-size: 20px;
-  font-weight: bold;
-  color: #333;
-  border-bottom: 1px solid #d9d9d9;
-}
-.nav-mb-gnb li:nth-child(4) a {
-  margin-bottom: 20%;
-}
-.log a {
-  color: #333;
-}
-.log a:hover a {
-  color: red;
-}
-.top-menu li:hover a {
-  background: linear-gradient(to top, #f0f4ff 100%, transparent 40%);
-  transition: all 5s;
-}
-.nav-mb img {
-}
-
-/* ==================== */
 /* 상단메뉴 */
 .top-menu {
-  max-width: 1400px;
-  width: 100%;
   display: flex;
-  justify-content: flex-end; /* 수정 */
-  text-align: center; /* 추가 */
+  justify-content: center;
   color: #134aa9;
-  gap: 6%;
-  font-size: 20px;
-  position: relative;
-  margin: 0 auto;
+  gap: 4%;
 }
 .top-menu li a {
   font-family: "KBO-Dia-Gothic_medium";
   white-space: nowrap;
   color: #134aa9;
+  font-size: 22px;
 }
 .top-menu li:hover a {
   background: linear-gradient(to top, #f0f4ff 100%, transparent 40%);
@@ -336,17 +103,31 @@ header img {
 .top-menu li:nth-child(5) {
   margin-left: 8%;
 }
-
+/* 메뉴-log */
+.log {
+  font-family: "KBO-Dia-Gothic_light";
+  font-size: 18px;
+  display: flex;
+  gap: 30px;
+  position: absolute;
+  right: 30px; /* 오른쪽 여백 추가 */
+  top: 50%;
+  transform: translateY(-50%); /* 수직 중앙 정렬 */
+}
+.log li a {
+  font-family: "KBO-Dia-Gothic_light";
+  /* color: red; */
+  font-size: 18px;
+}
 .visual {
   position: relative;
-  z-index: 99999;
 }
 .visual-img {
-  width: 100%;
+  width: 80%;
   height: auto;
-  /* position: absolute;
-  right: 0; */
+  margin: 100px auto;
 }
+
 /* 모바일 비주얼이미지 */
 .mb-visual-img {
   display: none;
@@ -362,10 +143,139 @@ header img {
   background-color: #f0f4ff;
   /* text-decoration: underline; */
 }
+
 /*   모바일 로고 */
 .logo-tablet,
 .fa-solid {
   /* display: none; */
+}
+/* 모바일 메뉴 햄버거  */
+.m-bt {
+  display: none;
+  position: absolute;
+  top: 35px;
+  bottom: 0;
+  margin: auto;
+  right: 35px;
+  width: 28px;
+  height: 15px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  z-index: 99999;
+}
+.m-bt span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #333;
+}
+/* 햄버거 눌렀을 때 색상 바뀜 */
+.m-bt.active span {
+  background-color: #134aa9;
+}
+/* 햄버거 아이콘 초기 상태 */
+.m-bt span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: center center;
+  width: 28px; /* 세로 선의 너비 조절 */
+  height: 3px; /* 세로 선의 높이 조절 */
+  background-color: #333; /* 세로 선의 색상 설정 */
+  transition: all 0.3s;
+}
+
+.m-bt span:nth-child(1) {
+  transform: translateY(-6px) translateX(-50%); /* 첫 번째 세로 선 위치 조절 */
+}
+
+.m-bt span:nth-child(2) {
+  transform: translateY(0px) translateX(-50%);
+  /* 두 번째 세로 선은 초기에 그대로 중앙에 위치 */
+  top: 50%;
+  left: 50%;
+}
+
+.m-bt span:nth-child(3) {
+  transform: translateY(6px) translateX(-50%); /* 세 번째 세로 선 위치 조절 */
+}
+
+/* 햄버거 아이콘 클릭 후 X 모양으로 전환 */
+.m-bt.ani span:nth-child(1) {
+  transform: translateY(-50%) translateX(-50%) rotate(45deg);
+}
+
+.m-bt.ani span:nth-child(2) {
+  opacity: 0;
+}
+
+.m-bt.ani span:nth-child(3) {
+  transform: translateY(-50%) translateX(-50%) rotate(-45deg);
+}
+
+/* 모바일 메뉴 로고이미지 */
+.nav-mb img {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* margin: 0 auto; */
+  width: 180px;
+  padding: 20px;
+}
+/* 모바일 메뉴 리스트 */
+.nav-mb {
+  position: absolute;
+  left: 100%;
+  /* top: 20px; */
+  width: 100%;
+  height: calc(100vh - 70px);
+  background-color: #fff;
+  /* opacity: 1; */
+  transition: all 0.3s;
+  z-index: 9999;
+}
+.nav-mb.active {
+  left: 0%;
+  opacity: 1;
+}
+.nav-mb-gnb li:first-child {
+  margin-top: 100px;
+  border-top: 1px solid #d9d9d9;
+}
+.nav-mb-gnb li a {
+  line-height: 60px;
+  display: block;
+  padding: 0 40px;
+  font-size: 20px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  color: #333;
+  border-bottom: 1px solid #d9d9d9;
+}
+.m-log {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+.m-log a {
+  color: #333;
+  font-family: "KBO-Dia-Gothic_light", sans-serif;
+  text-align: center;
+  font-size: 18px;
+}
+
+.m-log > li:hover a {
+  color: #134aa9;
+}
+/* 햄버거 눌렀을 때 메뉴 호버 */
+.nav-mb-gnb li:hover a {
+  background-color: #f0f4ff;
 }
 
 .counter-wrapper {
@@ -373,78 +283,94 @@ header img {
   height: auto;
   background-color: #f0f4ff;
   opacity: 0.9;
-  position: relative;
-}
-.count-inner {
-  max-width: 1400px;
-  height: auto;
-  /* background-color: yellow; */
-  width: 100%;
   display: flex;
-  justify-content: space-around;
-  /* gap: 20%; */
+  justify-content: center;
+  gap: 20%;
   padding: 3%;
-
-  margin: 0 auto;
+  position: absolute;
+  bottom: 4%;
 }
 .counter {
   font-family: "KBO-Dia-Gothic_medium";
 }
 .count-title {
-  font-size: 48px;
+  font-size: 44px;
   font-weight: normal;
   text-align: center;
   display: inline;
   color: #1e6bf1;
 }
 .plus {
-  font-size: 16px;
+  font-size: 18px;
   display: inline;
 }
 .count-text {
-  font-size: 18px;
+  font-size: 20px;
   margin-top: 8%;
   white-space: nowrap;
 }
-/* <!-- 섹션1 --> */
+/* 섹션1-서비스 */
 .section1 {
-  padding: 15% 0 15% 0;
-  background-color: #134aa9;
+  position: relative;
   width: 100%;
-  height: auto;
+  /* max-width: 1300px; */
+  /* height: 500px; */
+  background-image: url(../images/sec1-bg.png);
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex; /* 플렉스 박스 사용 */
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  padding: 20px 0 20px 0;
+}
+.sec1-inner {
+  width: 100%;
+  max-width: 1300px;
+  /* background-color: red; */
+}
+.sec1-title {
+  text-align: center;
+  margin: 10% 0 10% 0;
   color: #fff;
 }
-.sec1_inner {
-  margin: 0 auto;
-  /* background-color: rgb(235, 193, 200); */
-  max-width: 1400px;
+.sec1-title h2 {
+  font-size: 36px;
+  color: #fff;
+  padding-bottom: 5%;
+  font-family: "KBO-Dia-Gothic_medium";
+  white-space: nowrap;
 }
-.service_box {
-  /* background-color: pink; */
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  gap: 8%;
-  margin: 0 auto;
-  padding: 0 2% 0 2%;
-}
-.service_box li {
-  width: calc(100% / 3);
-}
-.service_box li a img {
-  width: 100%;
-}
-.service_box li .service_box li .service_box li del,
-p {
-  /* color: blue;  */
-  letter-spacing: 0.3px;
+
+.sec1-title p {
+  font-size: 28px;
+  color: #fff;
+  padding: 10px;
+  white-space: nowrap;
 }
 
 /* ========================================================================== */
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
+  .top-menu li a {
+    font-size: 18px;
+  }
+  .top-menu li:nth-child(5) {
+    /* margin-left: 8%; */
+  }
+  /* 메뉴-log */
+  .log {
+    font-size: 18px;
+    /* gap: 30px;
+  right: 5%; */
+    padding: 5px;
+  }
+  .log li a {
+    font-size: 16px;
+  }
   .count-title {
-    font-size: 42px;
+    font-size: 36px;
   }
   .plus {
     font-size: 16px;
@@ -453,43 +379,68 @@ p {
     font-size: 18px;
   }
 }
-
+@media screen and (max-width: 900px) {
+  .top-menu {
+    gap: 2%;
+  }
+  .top-menu li a {
+    font-size: 16px;
+  }
+  .top-menu li:nth-child(5) {
+    /* margin-left: 2%; */
+  }
+  /* 메뉴-log */
+  .log {
+    font-size: 18px;
+    gap: 20px;
+    /* right: 5%; */
+    /* padding: 5px; */
+  }
+  .log li a {
+    font-size: 14px;
+  }
+}
 @media screen and (max-width: 768px) {
+  /* 상단로고 이미지 */
+  .top-nav {
+    display: none;
+  }
   header img {
-    display: none;
+    width: 120px;
+    padding: 15px;
   }
-  .main-menu {
-    display: none;
+  /* 상단메뉴 박스 */
+  nav {
+    padding: 20px;
   }
-  .hd-menu {
-    display: none;
+  /* 상단메뉴 */
+  .top-menu {
+    gap: 4%;
+    font-size: 16px;
   }
-  .visual {
-    z-index: 9;
+  .top-menu li:nth-child(5) {
+    margin-left: 4%;
   }
-
-  /* .fa-solid {
-    display: inline-block;
-    font-size: 30px;
-    color: black;
-    line-height: 90px;
-    position: absolute;
-    top: 0;
-    right: 80px;
-    cursor: pointer;
-  } */
-  /* 모바일 메뉴 햄버거  */
-  .mbt {
+  /* 메뉴-log */
+  .log {
+    font-size: 14px;
+  }
+  /* 모바일메뉴 */
+  .m-bt {
     display: block;
   }
+  /* 카운트 */
+  .counter-wrapper {
+    gap: 15%;
+  }
   .count-title {
-    font-size: 32px;
+    font-size: 30px;
   }
   .plus {
-    font-size: 12px;
+    font-size: 14px;
   }
   .count-text {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   /* 섹션1-서비스 */
@@ -499,32 +450,36 @@ p {
   .m-bt {
     display: block;
   }
-  h4 {
-    font-size: 28px;
+
+  .sec1-title {
+    text-align: center;
+    padding: 100px 20px;
+    color: #fff;
+  }
+  .sec1-title h2 {
+    font-size: 32px;
+  }
+  .sec1-title p {
+    font-size: 24px;
   }
 }
-
-/* ==================================리스트 */
-.list_box {
-  width: 98%;
-  /* background-color: cadetblue; */
-  position: relative;
-  white-space: wrap;
-  gap: 8px;
-}
-.list_box li {
-  width: calc(100% / 4);
-}
-.list_box_text {
-  padding: 4px 0px 0px 4px;
-  position: relative;
-  /* background-color: blueviolet; */
-}
-
 /* ========================================================== */
 @media screen and (max-width: 560px) {
   .visual-img {
     display: none;
+  }
+
+  .counter-wrapper {
+    gap: 10%;
+  }
+  .count-title {
+    font-size: 22px;
+  }
+  .plus {
+    font-size: 12px;
+  }
+  .count-text {
+    font-size: 14px;
   }
 
   /* 모바일 비주얼이미지 */
@@ -533,21 +488,37 @@ p {
     display: block;
     margin: 0 auto;
   }
+  .sec1-title h2 {
+    font-size: 28px;
+  }
+  .sec1-title p {
+    font-size: 18px;
+  }
 }
-/* ========================================================== */
-
 @media screen and (max-width: 390px) {
   .count-title {
-    font-size: 16px;
+    font-size: 18px;
   }
   .plus {
     font-size: 10px;
   }
   .count-text {
-    font-size: 10px;
+    font-size: 12px;
   }
-
-  h4 {
-    font-size: 20px;
+  .sec1-title {
+    padding: 5%;
+    /* background-color: black; */
+  }
+  .sec1-title h2 {
+    font-size: 24px;
+    /* margin: 4% 0 0 4%; */
+  }
+  .sec1-title p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .sec1-title p {
+    font-size: 14px;
   }
 }
