--- a/css/seunga.css
+++ b/css/seunga.css
@@ -40,6 +40,7 @@ li {
 a {
   text-decoration: none;
 }
+
 /* 기타
 (컬러)
 대표색
@@ -51,24 +52,41 @@ a {
 */
 
 /* =======================================================승아 */
-/* 상당로고 이미지 */
+/* <!-- 탑버튼 --> */
+.top-button {
+position: relative;
+  z-index: 999999;
+  display: block;
+}
+.top-button .top-btn {
+  display: block;
+    position: fixed;
+      bottom: 10%;
+  right: 5%;
+  background-color: rgba(255, 255, 255, 0.8);
+  /* background-color: #134aa9; */
+  box-shadow: 2px 2px 2px #a7a7a7;
+  border-radius: 50%;
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+}
+.top-button .top-btn img {
+  transform: rotate(180deg);
+}
+.top-button .top-btn img.up {
+  transform: rotate(0deg);
+}
 /* 헤더 */
 header {
   position: fixed; /* 네비게이션 바가 항상 화면 상단에 고정될 수 있도록 */
   top: 0; /* 화면의 맨 위에 위치 */
   width: 100%; /* 전체 너비 차지 */
-  background-color: #fff; /* 네비게이션 바의 배경색으로 설정 */
+  height: auto;
+  background-color: #fff; 
+  /* background-color: rgba(255, 255, 255, 0.7); */
   z-index: 99999999999; /* 네비게이션 바가 다른 요소 위에 올라가도록 z-index 설정 */
   box-shadow: -1px 2px 10px 4px rgba(0, 0, 0, 0.05); /* 네비게이션 바의 box-shadow 효과 */
-}
-
-header img {
-  width: 180px;
-  display: inline-block;
-  position: absolute;
-  left: 30px; /* 왼쪽 여백 추가 */
-  top: 50%;
-  transform: translateY(-50%); /* 수직 중앙 정렬 */
 }
 
 /* 네비게이션 바 */
@@ -79,9 +97,16 @@ nav {
   padding: 30px;
   position: relative; /* 헤더와의 상대적 위치 설정 */
   display: block;
-  /* z-index: 9999; */
-
   margin: 0 auto;
+}
+.top-nav img {
+  width: 180px;
+  display: inline-block;
+  position: absolute;
+  left: 30px; /* 왼쪽 여백 추가 */
+  top: 30%;
+  margin: 20px;
+  transform: translateY(-50%); /* 수직 중앙 정렬 */
 }
 /* 상단메뉴 */
 .top-menu {
@@ -125,7 +150,7 @@ nav {
 .visual-img {
   width: 100%;
   height: auto;
-  /* margin: 40px auto; */
+  margin: 80px auto;
 }
 
 /* 모바일 비주얼이미지 */
@@ -153,10 +178,10 @@ nav {
 .m-bt {
   display: none;
   position: absolute;
-  top: 35px;
+  top: 30px;
   bottom: 0;
   margin: auto;
-  right: 35px;
+  right: 30px;
   width: 28px;
   height: 15px;
   background-color: transparent;
@@ -277,7 +302,6 @@ nav {
 .nav-mb-gnb li:hover a {
   background-color: #f0f4ff;
 }
-
 .counter-wrapper {
   width: 100%;
   height: auto;
@@ -288,7 +312,7 @@ nav {
   gap: 20%;
   padding: 2.5%;
   position: absolute;
-  bottom: 1%;
+  bottom: 14%;
 }
 .counter {
   font-family: "KBO-Dia-Gothic_medium";
@@ -309,43 +333,185 @@ nav {
   margin-top: 8%;
   white-space: nowrap;
 }
-/* 섹션1-서비스 */
+
+/* <!-- 섹션1 --> */
+
 .section1 {
-  position: relative;
+  padding: 8% 0 4% 0;
+  background-color: #fff;
   width: 100%;
-  background-image: url(../images/sec1-bg.png);
-  background-size: cover;
-  background-position: center;
-  margin: 0 auto;
-  overflow: hidden;
-  display: flex; /* 플렉스 박스 사용 */
-  justify-content: center; /* 수평 가운데 정렬 */
-  align-items: center; /* 수직 가운데 정렬 */
-  padding: 20px 0 20px 0;
+  color: #fff;
+  font-family: "KBO-Dia-Gothic_light";
+  position: relative;
 }
 .sec1-inner {
-  width: 100%;
+  margin: 0 auto;
+  /* background-color: rgb(235, 193, 200); */
   max-width: 1400px;
-  /* background-color: red; */
+  position: relative;
 }
-.sec1-title {
-  text-align: center;
-  margin: 10% 0 10% 0;
-  color: #fff;
+.sec1-main-text{
+  color:  #134aa9;
+  /* position: absolute;
+  top: -25%; */
+  line-height: 1.5em;
+  letter-spacing: 1px;
+  display: block;
 }
-.sec1-title h2 {
-  font-size: 36px;
-  color: #fff;
-  padding-bottom: 5%;
+/* 문구 최종확인 후 삭제 */
+/* .sec1-main-text h4{
   font-family: "KBO-Dia-Gothic_medium";
-  white-space: nowrap;
+  font-size: 36px;
+  text-align: center;
+  letter-spacing: 1.5px;
+  text-align: center;
+  display: block;
+ float: left;
+}
+.sec1-main-text p{
+  font-size: 28px;
+  float: left;
+} */
+.sec1-main-text h4{
+  font-family: "KBO-Dia-Gothic_medium";
+  font-size: 32px;
+  text-align: center;
+  letter-spacing: 1.5px;
+  text-align: center;
+  display: block;
+  position: absolute;
+  top: -3%;
+  color: #333;
+  padding-left: 3%;
+}
+.service-box {
+  /* background-color: pink; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 6%;
+  margin: 0 auto;
+  padding: 10% 3% 0 3%;
+}
+.service-box figure {
+  width: calc(100% / 3);
+  /* background-color: red; */
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+  /* min-width: 230px;
+    max-width: 315px; */
+  width: 100%;
+  color: #fff;
+  text-align: left;
+  line-height: 1.4em;
+  font-size: 18px;
+}
+.service-box figure img {
+  width: 100%;
+}
+.sb-img-title1, .sb-img-title2{
+  font-family: "KBO-Dia-Gothic_medium";
+  font-size: 24px;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+transform: translateX(-50%);
+padding: 20px;
+background-color: rgba(0, 0, 0, 0.2);
+width: 100%;
+top: center;
+display: block;
+text-align: center;
+}
+.service figcaption {
+  position: absolute;
+  /* top: calc(77%); */
+  /* top: calc(77%); */
+  width: 100%;
+  background-color: #134aa9;
+  padding: 15px 25px 65px;
 }
 
-.sec1-title p {
-  font-size: 28px;
-  color: #fff;
-  padding: 10px;
-  white-space: nowrap;
+.service figcaption:before {
+  position: absolute;
+  content: "";
+  z-index: 2;
+  bottom: 100%;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  /* background-image: -webkit-linear-gradient(top, transparent 0%,  #134aa9 100%); */
+  /* background-image: linear-gradient(to bottom, transparent 0%,  #134aa9 100%); */
+}
+figcaption h3,
+figcaption p {
+  letter-spacing: 0.3px;
+  margin: 0 0 8px;
+  /* color: red; */
+}
+.service h3 {
+  /* color: #134AA9; */
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 1.4em;
+  font-family: "KBO-Dia-Gothic_medium";
+  text-align: center;
+}
+.service p {
+  font-size: 0.9em;
+  letter-spacing: 0.5px;
+  opacity: 0.9;
+  font-size: 18px;
+}
+.service a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+.service:hover figcaption,
+.service.hover figcaption {
+  top: 80px;
+}
+.service * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+
+/* .service img {
+  max-width: 100%;
+  vertical-align: top;
+} */
+/* =============================== */
+/* 기본적으로 숨겨진 figcaption 요소 */
+.service figcaption {
+  top: 100%; /* 이미지 아래에 숨겨짐 */
+  transition: top 0.5s ease; /* 부드러운 전환 효과 적용 */
+}
+
+/* 호버 상태일 때 figcaption 요소를 보이도록 설정 */
+.service:hover figcaption {
+  top: calc(100% - 18vh); /* 이미지 아래로 이동하여 나타남 */
+}
+.service3-text{
+  position: absolute;
+  top: 15%;
+  left: 0;
+  padding: 0 10% 0 10% ;
+}
+.service3-text span{
+  font-size: 24px;
+  line-height: 3em;
+  font-family: "KBO-Dia-Gothic_medium";
+}
+.service3-text p{
+  font-size: 18px;
 }
 
 /* ========================================================================== */
@@ -354,9 +520,9 @@ nav {
   header img {
     width: 150px;
   }
-nav {
-  padding: 20px;
-}
+  nav {
+    padding: 20px;
+  }
   .visual-img {
     width: 90%;
   }
@@ -385,6 +551,14 @@ nav {
   .count-text {
     font-size: 18px;
   }
+  .sec1-main-text h4 {
+    font-size: 28px;
+    top: -40px;
+  }
+  .service-box {
+    gap: 4%;
+    padding: 4% 0 0 0;
+  }
 }
 @media screen and (max-width: 900px) {
   .top-menu {
@@ -406,15 +580,34 @@ nav {
   .log li a {
     font-size: 14px;
   }
+  .service h3 {
+    font-size: 22px;
+  }
+  .service p {
+    font-size: 16px;
+  }
 }
 @media screen and (max-width: 768px) {
-  /* 상단로고 이미지 */
-  .top-nav {
+/* <!-- 탑버튼 --> */
+.top-button {
+  bottom: 100px;
+  right: 22px;
+}
+  header {
+    top: 0; /* 화면의 맨 위에 위치 */
+    height: 65px;
+  }
+  .m-bt {
+    top: 0;
+  }
+  .top-nav ul {
     display: none;
   }
-  header img {
-    width: 120px;
-    padding: 15px;
+  .top-nav img {
+    width: 130px;
+    /* left: 30px;  */
+    top: 35%;
+    /* margin: 20px; */
   }
   /* 상단메뉴 박스 */
   nav {
@@ -422,7 +615,7 @@ nav {
   }
   /* 상단메뉴 */
   .top-menu {
-    gap: 4%;
+    gap: 6%;
     font-size: 16px;
   }
   .top-menu li:nth-child(5) {
@@ -449,35 +642,41 @@ nav {
   .count-text {
     font-size: 16px;
   }
-
   /* 섹션1-서비스 */
   .nav-mb img {
     display: block;
   }
-  .m-bt {
-    display: block;
+  .sec1-main-text h4 {
+    font-size: 22px;
+    top: -40px;
   }
-
-  .sec1-title {
-    text-align: center;
-    padding: 100px 20px;
-    color: #fff;
+  .service-box {
+    gap: 2%;
+    padding: 2% 0 0 0;
   }
-  .sec1-title h2 {
-    font-size: 32px;
+  .service h3 {
+    font-size: 20px;
   }
-  .sec1-title p {
-    font-size: 24px;
+  .service p {
+    font-size: 14px;
   }
 }
 /* ========================================================== */
 @media screen and (max-width: 560px) {
+  .top-nav img {
+    width: 115px;
+    left: 10px; 
+  }
   .visual-img {
     display: none;
   }
-
+  .counter-wrapper {
+    bottom: 8%;
+    /* background-color: red; */
+  }
   .counter-wrapper {
     gap: 10%;
+
   }
   .count-title {
     font-size: 22px;
@@ -488,18 +687,26 @@ nav {
   .count-text {
     font-size: 14px;
   }
-
   /* 모바일 비주얼이미지 */
   .mb-visual-img {
     width: 100%;
     display: block;
     margin: 0 auto;
   }
-  .sec1-title h2 {
-    font-size: 28px;
+  .sec1-main-text h4 {
+    font-size: 16px;
+    top: -40px;
   }
-  .sec1-title p {
+  .service-box {
+    gap: 1%;
+    padding: 1% 0 0 0;
+  }
+
+  .service h3 {
     font-size: 18px;
+  }
+  .service p {
+    font-size: 12px;
   }
 }
 @media screen and (max-width: 390px) {
@@ -512,16 +719,22 @@ nav {
   .count-text {
     font-size: 12px;
   }
-  .sec1-title {
-    padding: 5%;
-    /* background-color: black; */
-  }
-  .sec1-title h2 {
-    font-size: 24px;
-    /* margin: 4% 0 0 4%; */
-  }
-  .sec1-title p {
+  .sec1-main-text h4 {
     font-size: 14px;
+    top: -40px;
+  }
+  .service-box {
+    gap: 1%;
+    padding: 1% 0 0 0;
+  }
+  .service h3 {
+    font-size: 16px;
+  }
+  .service p {
+    font-size: 10px;
+  }
+  .service figcaption {
+    padding: 0 6% 0 6%;
   }
 }
 @media screen and (max-width: 320px) {
